[gd_scene load_steps=6 format=2]

[ext_resource path="res://world/InteractableArea.gd" type="Script" id=1]
[ext_resource path="res://world/PlayerDetectionArea.gd" type="Script" id=2]
[ext_resource path="res://world/InteractableArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://world/PlayerDetectionArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://items/DroppedItem.gd" type="Script" id=5]

[node name="DroppedItem" type="Spatial"]
script = ExtResource( 5 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 0.939693, -0.34202, 0, 0.34202, 0.939693, 0, 0.110842, 0 )

[node name="PlayerDetectionArea" type="Area" parent="." instance=ExtResource( 4 )]
monitorable = false
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )
reactivation_lockout = 2.0

[node name="InteractableArea" type="Area" parent="." instance=ExtResource( 3 )]
monitoring = false
collision_layer = 16
collision_mask = 0
script = ExtResource( 1 )
one_shot = true

[connection signal="body_entered" from="PlayerDetectionArea" to="PlayerDetectionArea" method="on_player_entered"]
[connection signal="body_exited" from="PlayerDetectionArea" to="PlayerDetectionArea" method="on_player_exited"]
[connection signal="player_entered" from="PlayerDetectionArea" to="." method="_on_PlayerDetectionArea_player_entered"]
[connection signal="triggered" from="InteractableArea" to="." method="_on_InteractableArea_triggered"]
[connection signal="triggered" from="InteractableArea" to="PlayerDetectionArea" method="disable"]
